--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -125,3 +125,9 @@ stages:
       id: test13
       downloadType: specific
       itemPattern: '*.txt' 
+
+  - template: download-job.yml
+    parameters:
+      id: test14
+      downloadType: specific
+      itemPattern: '*1/**'
