--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,82 +52,77 @@ stages:
   - template: download-job.yml
     parameters:
       id: test1
-      artifactName: b1
+      artifactName: a1
       itemPattern: '**'
 
   - template: download-job.yml
     parameters:
       id: test2
-      artifactName: b1
-      itemPattern: 'b1/**'
+      artifactName: a1
+      itemPattern: 'a1/**'
 
   - template: download-job.yml
     parameters:
       id: test3
-      artifactName: b1
+      artifactName: a1
       itemPattern: 'b2/**'
 
   - template: download-job.yml
     parameters:
       id: test4
-      itemPattern: 'b1/**'
+      itemPattern: 'a1/**'
 
   - template: download-job.yml
     parameters:
       id: test5
-      artifactName: b1
-      itemPattern: 'b1/*'
+      artifactName: a1
+      itemPattern: 'a1/*'
 
   - template: download-job.yml
     parameters:
       id: test6
-      artifactName: b1
+      artifactName: a1
       itemPattern: '*'
 
   - template: download-job.yml
     parameters:
       id: test7
-      artifactName: b1
+      artifactName: a1
       itemPattern: '*/*'      
 
   - template: download-job.yml
     parameters:
       id: test8
-      artifactName: b1
-      itemPattern: 'b1/*.dll'
+      artifactName: a1
+      itemPattern: 'a1/*.dll'
 
   - template: download-job.yml
     parameters:
       id: test9
-      artifactName: b1
-      itemPattern: 'b1/*.txt'
+      artifactName: a1
+      itemPattern: 'a1/*.txt'
 
   - template: download-job.yml
     parameters:
       id: test10
-      downloadType: specific
       itemPattern: '**'
 
   - template: download-job.yml
     parameters:
       id: test11
-      downloadType: specific
       itemPattern: '**/*.txt'
 
   - template: download-job.yml
     parameters:
       id: test12
-      downloadType: specific
-      itemPattern: 'b1/*.txt'
+      itemPattern: 'a1/*.txt'
 
   - template: download-job.yml
     parameters:
       id: test13
-      downloadType: specific
       itemPattern: '*.txt' 
 
   - template: download-job.yml
     parameters:
       id: test14
-      downloadType: specific
       itemPattern: '*1/**'
