drop dpa for now

--- a/download-job.yml
+++ b/download-job.yml
@@ -37,12 +37,12 @@ jobs:
       downloadType: '$(DBA_DOWNLOAD_TYPE)'
     continueOnError: true
 
-  - task: DownloadPipelineArtifact@1
-    inputs:
-      targetPath: '$(Build.SourcesDirectory)/results/dpa'
-      ArtifactName: '$(DPA_ARTIFACT)'
-      itemPattern: '$(DPA_PATTERN)'
-    continueOnError: true    
+  # - task: DownloadPipelineArtifact@1
+  #   inputs:
+  #     targetPath: '$(Build.SourcesDirectory)/results/dpa'
+  #     ArtifactName: '$(DPA_ARTIFACT)'
+  #     itemPattern: '$(DPA_PATTERN)'
+  #   continueOnError: true    
   
   - bash: |
       echo "======================================================="
@@ -56,8 +56,8 @@ jobs:
       echo "======================================================="
       echo "DBA (artifact=${DBA_ARTIFACT}, pattern=${DBA_PATTERN}):"
       cd ../results/dba/ && grep -r -l "." | sort
-      echo "======================================================="
-      echo "DPA (artifact=${DPA_ARTIFACT}, pattern=${DPA_PATTERN}):"
-      cd ../results/dpa/ && grep -r -l "." | sort
+      #echo "======================================================="
+      #echo "DPA (artifact=${DPA_ARTIFACT}, pattern=${DPA_PATTERN}):"
+      #cd ../results/dpa/ && grep -r -l "." | sort
     displayName: 'Results'
     continueOnError: true
