--- a/download-job.yml
+++ b/download-job.yml
@@ -1,5 +1,5 @@
 parameters:
-  id: ''
+  test: ''
   artifactName: ''
   itermPattern: ''
 
@@ -29,6 +29,8 @@ jobs:
       echo "##vso[task.setVariable variable=DBA_PATTERN]$DBA_PATTERN"
       echo "##vso[task.setVariable variable=DBA_DOWNLOAD_TYPE]$DBA_DOWNLOAD_TYPE"
 
+  #- bash: npm install -g tree-node-cli
+
   - task: DownloadBuildArtifacts@0
     inputs:
       downloadPath: '$(Build.SourcesDirectory)/results/dba'
@@ -43,21 +45,28 @@ jobs:
   #     ArtifactName: '$(DPA_ARTIFACT)'
   #     itemPattern: '$(DPA_PATTERN)'
   #   continueOnError: true    
-  
+
   - bash: |
-      echo "======================================================="
-      echo "All artifacts:"
-      cd files
-      grep -r -l "." | sort
-      mv a1 b1
-      mv a2 b2
-      mv a3 b3
-      grep -r -l "." | sort
-      echo "======================================================="
-      echo "DBA (artifact=${DBA_ARTIFACT}, pattern=${DBA_PATTERN}):"
-      cd ../results/dba/ && grep -r -l "." | sort
-      #echo "======================================================="
-      #echo "DPA (artifact=${DPA_ARTIFACT}, pattern=${DPA_PATTERN}):"
-      #cd ../results/dpa/ && grep -r -l "." | sort
+      tree -a ./files
+      echo ""
+      tree -a ./results/dba
     displayName: 'Results'
     continueOnError: true
+  
+  # - bash: |
+  #     echo "======================================================="
+  #     echo "All artifacts:"
+  #     cd files
+  #     grep -r -l "." | sort
+  #     mv a1 b1
+  #     mv a2 b2
+  #     mv a3 b3
+  #     grep -r -l "." | sort
+  #     echo "======================================================="
+  #     echo "DBA (artifact=${DBA_ARTIFACT}, pattern=${DBA_PATTERN}):"
+  #     cd ../results/dba/ && grep -r -l "." | sort
+  #     #echo "======================================================="
+  #     #echo "DPA (artifact=${DPA_ARTIFACT}, pattern=${DPA_PATTERN}):"
+  #     #cd ../results/dpa/ && grep -r -l "." | sort
+  #   displayName: 'Results'
+  #   continueOnError: true
