--- a/download-job.yml
+++ b/download-job.yml
@@ -4,7 +4,7 @@ parameters:
   itermPattern: ''
 
 jobs:
-- job: ${{ parameters.id }}
+- job: ${{ parameters.test }}
   variables:
     TEST_DESCRIPTION: ${{ parameters.description }}
     ARTIFACT: ${{ parameters.artifactName }}
@@ -29,7 +29,7 @@ jobs:
       echo "##vso[task.setVariable variable=DBA_PATTERN]$DBA_PATTERN"
       echo "##vso[task.setVariable variable=DBA_DOWNLOAD_TYPE]$DBA_DOWNLOAD_TYPE"
 
-  #- bash: npm install -g tree-node-cli
+  - bash: npm install -g tree-node-cli
 
   - task: DownloadBuildArtifacts@0
     inputs:
