--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,33 +1,16 @@
   jobs:
   - job:
     steps:
-    - task: PublishBuildArtifacts@1
+    - task: PublishPipelineArtifact@0
       inputs:
-        pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
-        ArtifactName: a
-      displayName: Publish pipeline artifact (A)
-
-    - task: PublishBuildArtifacts@1
-      inputs:
-        pathtoPublish: '$(Build.SourcesDirectory)/artifact2'
+        targetPath: '$(Build.SourcesDirectory)/artifact1'
         ArtifactName: a/b
       displayName: Publish pipeline artifact (a/b)
 
-    - task: DownloadBuildArtifacts@0
+    - task: DownloadPipelineArtifact@1
       inputs:
-        downloadType: specific
-        itemPattern: 'a/b/c.txt'
+        artifactName: a/b
         downloadPath: '$(Build.SourcesDirectory)/results'
 
-    - task: DownloadBuildArtifacts@0
-      inputs:
-        downloadType: single
-        artifactName: a
-        downloadPath: '$(Build.SourcesDirectory)/results-a'        
+    - bash: echo "$(ls -la ./results)"
 
-    - bash: |
-        echo "$(ls -la ./results)"
-        echo "Wildcard results:"
-        echo "$(cat ./results/a/b/c.txt)"
-        echo "artfiact a:"
-        echo "$(cat ./results-a/a/b/c.txt)"
