--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,61 +1,68 @@
-  jobs:
-  - job:
-    strategy:
-      matrix:
-        linux:
-          VM_IMAGE: ubuntu-16.04
-        windows: 
-          VM_IMAGE: vs2017-win2016
-        macOS:
-          VM_IMAGE: macOS-10.13
-    pool:
-      vmImage: $(VM_IMAGE)
-    steps:
-    - task: PublishBuildArtifacts@1
-      inputs:
-        pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
-        artifactName: 'a?$(Agent.OS)'
-      continueOnError: true
+jobs:
+- job:
+  strategy:
+    matrix:
+      linux:
+        VM_IMAGE: ubuntu-16.04
+      windows: 
+        VM_IMAGE: vs2017-win2016
+      macOS:
+        VM_IMAGE: macOS-10.13
+  pool:
+    vmImage: $(VM_IMAGE)
+  steps:
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
+      artifactName: 'a?$(Agent.OS)'
+    continueOnError: true
+    timeoutInMinutes: 1
 
-    - task: PublishBuildArtifacts@1
-      inputs:
-        pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
-        artifactName: '$a$(Agent.OS)'
-      continueOnError: true
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
+      artifactName: '$a$(Agent.OS)'
+    continueOnError: true
+    timeoutInMinutes: 1
 
-    - task: PublishBuildArtifacts@1
-      inputs:
-        pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
-        artifactName: 'a:b$(Agent.OS)'
-      continueOnError: true
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
+      artifactName: 'a:b$(Agent.OS)'
+    continueOnError: true
+    timeoutInMinutes: 1
 
-    - task: PublishBuildArtifacts@1
-      inputs:
-        pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
-        artifactName: 'a:$(Agent.OS)'
-      continueOnError: true
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
+      artifactName: 'a:$(Agent.OS)'
+    continueOnError: true
+    timeoutInMinutes: 1
 
-    - task: PublishBuildArtifacts@1
-      inputs:
-        pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
-        artifactName: '>$(Agent.OS)'
-      continueOnError: true
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
+      artifactName: '>$(Agent.OS)'
+    continueOnError: true
+    timeoutInMinutes: 1
 
-    - task: PublishBuildArtifacts@1
-      inputs:
-        pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
-        artifactName: '<$(Agent.OS)'
-      continueOnError: true
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
+      artifactName: '<$(Agent.OS)'
+    continueOnError: true
+    timeoutInMinutes: 1
 
-    - task: PublishBuildArtifacts@1
-      inputs:
-        pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
-        artifactName: '..$(Agent.OS)'
-      continueOnError: true
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
+      artifactName: '..$(Agent.OS)'
+    continueOnError: true
+    timeoutInMinutes: 1
 
-
-    - task: PublishBuildArtifacts@1
-      inputs:
-        pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
-        artifactName: '.$(Agent.OS)'
-      continueOnError: true
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: '$(Build.SourcesDirectory)/artifact1'
+      artifactName: '.$(Agent.OS)'
+    continueOnError: true
+    timeoutInMinutes: 1
