--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -4,3 +4,6 @@ steps:
     tar --version
   displayName: Show tar (from bash shell)
 
+- script: tar --force-local -cf $(TEMP)/archive.tar -C $(Build.SourcesDirectory) .
+  displayName: Run tar
+
